--- a/Data_Analysis/11-1_csv.ipynb
+++ b/Data_Analysis/11-1_csv.ipynb
@@ -1274,20 +1274,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['2022-11', '경원선', '1022', '창동', 12, 0, 0, 0, '2022-12-03 10:33:29']\n",
-      "['2022-11', '경의선', '1296', '계양', 9, 0, 0, 0, '2022-12-03 10:33:29']\n",
-      "['2022-11', '경의선', '1297', '검암', 2, 0, 0, 0, '2022-12-03 10:33:29']\n",
-      "['2022-11', '6호선', '2649', '신내', 12, 0, 0, 0, '2022-12-03 10:33:29']\n",
-      "['2022-11', '7호선', '2753', '까치울', 2, 0, 0, 0, '2022-12-03 10:33:29']\n",
-      "['2022-11', '7호선', '2757', '부천시청', 2, 0, 0, 0, '2022-12-03 10:33:29']\n",
-      "37.0\n"
+      "['2022-11', '2호선', '0209', '한양대', 361978, 397968, 14285, 15186, '2022-12-03 10:33:29'] 0.96\n",
+      "['2022-11', '2호선', '0239', '홍대입구', 1799913, 1939984, 95127, 91586, '2022-12-03 10:33:29'] 0.95\n",
+      "['2022-11', '경부선', '1001', '서울역', 253334, 75821, 15763, 3185, '2022-12-03 10:33:29'] 0.94\n",
+      "['2022-11', '9호선', '4125', '신논현', 827026, 808561, 52728, 50897, '2022-12-03 10:33:29'] 0.94\n",
+      "['2022-11', '공항철도 1호선', '4203', '홍대입구', 347489, 352658, 18116, 17151, '2022-12-03 10:33:29'] 0.95\n",
+      "['2022-11', '공항철도 1호선', '4206', '마곡나루(서울식물원)', 262762, 255645, 15242, 15291, '2022-12-03 10:33:29'] 0.95\n",
+      "0.945173450741716\n"
      ]
     }
    ],
@@ -1303,12 +1303,11 @@
     "    for i in range(4,8) :\n",
     "        row[i] = int(row[i].replace(',',''))\n",
     "    # print(row[4] , row[6])\n",
-    "    if row[6] == 0 :\n",
-    "        print(row)\n",
-    "    if row[6] != 0 :\n",
-    "        rate = row[4] / row[6]\n",
-    "    if rate > mx :\n",
-    "        mx = rate\n",
+    "    if row[6] != 0 and (row[4]+row[6]) > 100000:\n",
+    "        rate = row[4] / (row[6]+row[4])\n",
+    "        if rate > 0.94 :\n",
+    "            mx = rate\n",
+    "            print(row, round(rate,2))\n",
     "print(mx)"
    ]
   }
