--- a/Data_Analysis/11-1_csv.ipynb
+++ b/Data_Analysis/11-1_csv.ipynb
@@ -1310,6 +1310,41 @@
     "            print(row, round(rate,2))\n",
     "print(mx)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "한양대 2호선 96.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv \n",
+    "\n",
+    "f = open('./data/subwayfee.csv')\n",
+    "data = csv.reader(f)\n",
+    "next(data)\n",
+    "\n",
+    "mx = 0\n",
+    "rate = 0\n",
+    "mx_station = ''\n",
+    "\n",
+    "for row in data :\n",
+    "    for i in range(4,8) :\n",
+    "        row[i] = int(row[i].replace(',',''))\n",
+    "    if row[6] != 0 and (row[4]+row[6]) > 100000 :\n",
+    "        rate = row[4]  / (row[4] + row[6])\n",
+    "        if rate > mx :\n",
+    "            mx = rate\n",
+    "            mx_station = row[3] + ' ' + row[1]\n",
+    "print(mx_station , round(mx*100 , 2))"
+   ]
   }
  ],
  "metadata": {
